实现字体构建

--- a/assets/www-static/index.html
+++ b/assets/www-static/index.html
@@ -12,7 +12,7 @@
         }
         @font-face {
             font-family: Fusion-Pixel-12;
-            src: url("fusion-pixel-12px.woff2");
+            src: url("fusion-pixel.woff2");
         }
         .title {
             font-family: Fusion-Pixel-12, sans-serif;
