--- a/assets/www-static/index.html
+++ b/assets/www-static/index.html
@@ -41,6 +41,105 @@
     <p>★☆☺☹♠♡♢♣♤♥♦♧☀☼♩♪♫♬☂☁⚓✈⚔☯</p>
 </div>
 <br>
+<p class="content">
+    Windows 中文字型范例 1234567890
+    <br>
+    Innovation in China 中国智造，慧及全球 0123456789
+    <br>
+    視野無限廣，窗外有藍天
+    <br>
+    Windows 興國安邦，巨擘八方！
+    <br>
+    微風迎客，軟語伴茶
+    <br>
+    Windowsでコンピュータの世界が広がります。 1234567890
+    <br>
+    汉字书写信息技术标准相容档案下载使用界面简单支援服务升级资讯专业制作创意空间快速无线上网
+    <br>
+    あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。
+    <br>
+    我能吞下玻璃而不伤身体。
+    <br>
+    我能吞下玻璃而不傷身體。
+</p>
+<br>
+<h1 class="title">沁园春·雪</h1>
+<p class="content">毛泽东</p>
+<p class="content">
+    北国风光，千里冰封，万里雪飘。
+    <br>
+    望长城内外，惟余莽莽；大河上下，顿失滔滔。
+    <br>
+    山舞银蛇，原驰蜡象，欲与天公试比高。
+    <br>
+    须晴日，看红装素裹，分外妖娆。
+    <br>
+    江山如此多娇，引无数英雄竞折腰。
+    <br>
+    惜秦皇汉武，略输文采；唐宗宋祖，稍逊风骚。
+    <br>
+    一代天骄，成吉思汗，只识弯弓射大雕。
+    <br>
+    俱往矣，数风流人物，还看今朝。
+</p>
+<h1 class="title">沁園春·雪</h1>
+<p class="content">毛澤東</p>
+<p class="content">
+    北國風光，千裏冰封，萬裏雪飄。
+    <br>
+    望長城內外，惟余莽莽；大河上下，頓失滔滔。
+    <br>
+    山舞銀蛇，原馳蠟象，欲與天公試比高。
+    <br>
+    須晴日，看紅裝素裹，分外妖嬈。
+    <br>
+    江山如此多嬌，引無數英雄競折腰。
+    <br>
+    惜秦皇漢武，略輸文采；唐宗宋祖，稍遜風騷。
+    <br>
+    一代天驕，成吉思汗，只識彎弓射大雕。
+    <br>
+    俱往矣，數風流人物，還看今朝。
+</p>
+<h1 class="title">沁园春·长沙</h1>
+<p class="content">毛泽东</p>
+<p class="content">
+    独立寒秋，湘江北去，橘子洲头。
+    <br>
+    看万山红遍，层林尽染；漫江碧透，百舸争流。
+    <br>
+    鹰击长空，鱼翔浅底，万类霜天竞自由。
+    <br>
+    怅寥廓，问苍茫大地，谁主沉浮？
+    <br>
+    携来百侣曾游，忆往昔峥嵘岁月稠。
+    <br>
+    恰同学少年，风华正茂；书生意气，挥斥方遒。
+    <br>
+    指点江山，激扬文字，粪土当年万户侯。
+    <br>
+    曾记否，到中流击水，浪遏飞舟？
+</p>
+<h1 class="title">沁園春·長沙</h1>
+<p class="content">毛澤東</p>
+<p class="content">
+    獨立寒秋，湘江北去，橘子洲頭。
+    <br>
+    看萬山紅遍，層林盡染；漫江碧透，百舸爭流。
+    <br>
+    鷹擊長空，魚翔淺底，萬類霜天競自由。
+    <br>
+    悵寥廓，問蒼茫大地，誰主沈浮？
+    <br>
+    攜來百侶曾遊，憶往昔崢嶸歲月稠。
+    <br>
+    恰同學少年，風華正茂；書生意氣，揮斥方遒。
+    <br>
+    指點江山，激揚文字，糞土當年萬戶侯。
+    <br>
+    曾記否，到中流擊水，浪遏飛舟？
+</p>
+<br>
 <h1 class="title">千字文</h1>
 <p class="content">
     天地玄黄，宇宙洪荒。日月盈昃，辰宿列张。寒来暑往，秋收冬藏。闰余成岁，律吕调阳。<br>
@@ -78,25 +177,33 @@
 </p>
 <br>
 <h1 class="title">任天堂</h1>
-<div class="content">
-    <a href="https://zh.wikipedia.org/wiki/%E4%BB%BB%E5%A4%A9%E5%A0%82">https://zh.wikipedia.org/wiki/%E4%BB%BB%E5%A4%A9%E5%A0%82</a>
-    <p>任天堂是一家主要从事电子游戏和玩具的开发、制造与发行的日本公司。于1889年在日本京都创立，至今公司总部仍设于京都。任天堂最初以生产花札起家，1970年代后期投入电子游戏产业，在1983年推出家用游戏机 Family Computer（俗称红白机）、及在1985年推出游戏软件《超级马力欧兄弟》后，逐渐成为世界知名的电子游戏开发商。随着电子游戏事业的成功，任天堂亦向日本以外地区发展，现已有任天堂（美国）、任天堂（香港）等多家海外子公司。</p>
-    <p>任天堂已开发的家用游戏机包括Color TV-Game、Family Computer、Super Famicom、任天堂64、任天堂GameCube、Wii和Wii U，而掌上游戏机则包括Game & Watch、Game Boy系列、任天堂DS系列和任天堂3DS系列（包括定位是掌上游戏机，但属于桌面台式游戏机的Virtual Boy），此外还有最新的便携式家用游戏机任天堂Switch和掌上型游戏机任天堂Switch Lite。 任天堂本公司及第二方（包括控股子公司以及参股公司）开发了许多知名游戏系列与作品；亦创造了众多知名虚拟游戏角色。 自1983年红白机发售起至2018年初，任天堂已在全球售出超过45亿份游戏软件，超过7.2亿台游戏主机（包括家用游戏机和掌上游戏机）。</p>
-</div>
+<a class="content" href="https://zh.wikipedia.org/zh-cn/%E4%BB%BB%E5%A4%A9%E5%A0%82" target="_blank">https://zh.wikipedia.org/zh-cn/%E4%BB%BB%E5%A4%A9%E5%A0%82</a>
+<p class="content">任天堂是一家主要从事电子游戏和玩具的开发、制造与发行的日本公司。于1889年在日本京都创立，至今公司总部仍设于京都。任天堂最初以生产花札起家，1970年代后期投入电子游戏产业，在1983年推出家用游戏机 Family Computer（俗称红白机）、及在1985年推出游戏软件《超级马力欧兄弟》后，逐渐成为世界知名的电子游戏开发商。随着电子游戏事业的成功，任天堂亦向日本以外地区发展，现已有任天堂（美国）、任天堂（香港）等多家海外子公司。</p>
+<p class="content">任天堂已开发的家用游戏机包括 Color TV-Game、Family Computer、Super Famicom、任天堂64、任天堂 GameCube、Wii 和 Wii U，而掌上游戏机则包括 Game & Watch、Game Boy 系列、任天堂 DS 系列和任天堂 3DS 系列（包括定位是掌上游戏机，但属于桌面台式游戏机的 Virtual Boy），此外还有最新的便携式家用游戏机任天堂 Switch 和掌上型游戏机任天堂 Switch Lite。任天堂本公司及第二方（包括控股子公司以及参股公司）开发了许多知名游戏系列与作品；亦创造了众多知名虚拟游戏角色。自1983年红白机发售起至2018年初，任天堂已在全球售出超过45亿份游戏软件，超过7.2亿台游戏主机（包括家用游戏机和掌上游戏机）。</p>
+<h1 class="title">任天堂</h1>
+<a class="content" href="https://zh.wikipedia.org/zh-hk/%E4%BB%BB%E5%A4%A9%E5%A0%82" target="_blank">https://zh.wikipedia.org/zh-hk/%E4%BB%BB%E5%A4%A9%E5%A0%82</a>
+<p class="content">任天堂是一家主要從事電子遊戲和玩具的開發、製造與發行的日本公司。於1889年在日本京都創立，至今公司總部仍設於京都。任天堂最初以生產花札起家，1970年代後期投入電子遊戲產業，在1983年推出家用遊戲機 Family Computer（俗稱紅白機）、及在1985年推出遊戲軟件《超級瑪利歐兄弟》後，逐漸成為世界知名的電子遊戲開發商。隨着電子遊戲事業的成功，任天堂亦向日本以外地區發展，現已有任天堂（美國）、任天堂（香港）等多家海外子公司。</p>
+<p class="content">任天堂已開發的家用遊戲機包括 Color TV-Game、Family Computer、Super Famicom、任天堂64、任天堂 GameCube、Wii 和 Wii U，而掌上遊戲機則包括 Game & Watch、Game Boy 系列、任天堂 DS 系列和任天堂 3DS 系列（包括定位是掌上遊戲機，但屬於桌面台式遊戲機的 Virtual Boy），此外還有最新的可攜式家用遊戲機任天堂 Switch 和掌上型遊戲機任天堂 Switch Lite。任天堂本公司及第二方（包括控股子公司以及參股公司）開發了許多知名遊戲系列與作品；亦創造了眾多知名虛擬遊戲角色。自1983年紅白機發售起至2018年初，任天堂已在全球售出超過45億份遊戲軟件，超過7.2億台遊戲主機（包括家用遊戲機和掌上遊戲機）。</p>
 <h1 class="title">任天堂株式会社</h1>
-<div class="content">
-    <a href="https://ja.wikipedia.org/wiki/%E4%BB%BB%E5%A4%A9%E5%A0%82">https://ja.wikipedia.org/wiki/%E4%BB%BB%E5%A4%A9%E5%A0%82</a>
-    <p>任天堂株式会社（にんてんどう、英: Nintendo Co., Ltd.）は、主に玩具やコンピュータゲームの開発・製造・販売を行う日本の企業。TOPIX Core30の構成銘柄の一つである。</p>
-    <p>明治時代の1889年に創業した老舗企業で、娯楽に関する様々な事業を展開している。創業以来、多くの種類の玩具を製作しており、特に花札やトランプは創業初期から現在に至るまで製造・販売を続けている。</p>
-    <p>1970年代後期からは家庭用と業務用のコンピュータゲーム機の開発を開始。1983年発売の据置型ゲーム機「ファミリーコンピュータ」のゲームソフトとして1985年に発売した『スーパーマリオブラザーズ』は世界的にヒットし、任天堂はゲーム機やゲームソフトを開発する会社として広く認知されるようになった。</p>
-    <p>『スーパーマリオブラザーズ』の主人公「マリオ」など、任天堂のゲームソフトに登場するキャラクターは世界で知られているものが多く、2010年代からはキャラクターIPのゲーム外での活用を進めている。</p>
-</div>
+<a class="content" href="https://ja.wikipedia.org/wiki/%E4%BB%BB%E5%A4%A9%E5%A0%82" target="_blank">https://ja.wikipedia.org/wiki/%E4%BB%BB%E5%A4%A9%E5%A0%82</a>
+<p class="content">任天堂株式会社（にんてんどう、英: Nintendo Co., Ltd.）は、主に玩具やコンピュータゲームの開発・製造・販売を行う日本の企業。TOPIX Core30の構成銘柄の一つである。</p>
+<p class="content">明治時代の1889年に創業した老舗企業で、娯楽に関する様々な事業を展開している。創業以来、多くの種類の玩具を製作しており、特に花札やトランプは創業初期から現在に至るまで製造・販売を続けている。</p>
+<p class="content">1970年代後期からは家庭用と業務用のコンピュータゲーム機の開発を開始。1983年発売の据置型ゲーム機「ファミリーコンピュータ」のゲームソフトとして1985年に発売した『スーパーマリオブラザーズ』は世界的にヒットし、任天堂はゲーム機やゲームソフトを開発する会社として広く認知されるようになった。</p>
+<p class="content">『スーパーマリオブラザーズ』の主人公「マリオ」など、任天堂のゲームソフトに登場するキャラクターは世界で知られているものが多く、2010年代からはキャラクターIPのゲーム外での活用を進めている。</p>
+<h1 class="title">닌텐도</h1>
+<a class="content" href="https://ko.wikipedia.org/wiki/%EB%8B%8C%ED%85%90%EB%8F%84" target="_blank">https://ko.wikipedia.org/wiki/%EB%8B%8C%ED%85%90%EB%8F%84</a>
+<p class="content">닌텐도 주식회사는 일본의 교토시에 본사를 둔 가전제품·비디오 게임 회사이다. 닌텐도는 마리오 시리즈, 젤다의 전설, 포켓몬스터, 동물의 숲, 스플래툰과 같은 널리 알려진 프랜차이즈 게임을 생산했고, 전 세계의 비디오 게임 전문 회사 가운데 시가총액이 가장 큰 기업이다.</p>
+<p class="content">1889년 9월 23일 야마우치 후사지로가 화투 제조 회사로 설립한 것으로 시작되었으며, 1963년까지 운송업이나 러브 호텔 등 틈새 시장을 노렸으나 성공을 거두지 못했다.1960년대 들어서는 일본의 완구 회사인 '울트라핸드'와 협력하여 완구 사업에 총력을 기울이기 시작했고 그 외의 다른 사업에서 손을 떼게 되었다. 1970년대부터는 비디오 게임 회사로 변모하였고, 지금까지 이어져 오고 있다.</p>
 <h1 class="title">Nintendo</h1>
-<div class="content">
-    <a href="https://en.wikipedia.org/wiki/Nintendo">https://en.wikipedia.org/wiki/Nintendo</a>
-    <p>Nintendo Co., Ltd. is a Japanese multinational consumer electronics and video game company headquartered in Kyoto. The company was founded in 1889 as Nintendo Karuta by craftsman Fusajiro Yamauchi and originally produced handmade hanafuda playing cards. After venturing into various lines of business during the 1960s and acquiring a legal status as a public company under the current company name, Nintendo distributed its first video game console, the Color TV-Game, in 1977. It gained international recognition with the release of the Nintendo Entertainment System in 1985.</p>
-    <p>Since then, Nintendo has produced some of the most successful consoles in the video game industry, such as the Game Boy, the Super Nintendo Entertainment System, the Nintendo DS, the Wii, and the Nintendo Switch. It has created numerous major franchises, including Mario, Donkey Kong, The Legend of Zelda, Pokémon, Kirby, Metroid, Fire Emblem, Animal Crossing, Splatoon, Star Fox, Xenoblade Chronicles, and Super Smash Bros.</p>
-    <p>Nintendo has multiple subsidiaries in Japan and abroad, in addition to business partners such as The Pokémon Company and HAL Laboratory. Nintendo and its staff has received awards including Emmy Awards for Technology & Engineering, Game Awards, Game Developers Choice Awards and British Academy Games Awards. It is one of the wealthiest and most valuable companies in the Japanese market.</p>
-</div>
+<a class="content" href="https://en.wikipedia.org/wiki/Nintendo" target="_blank">https://en.wikipedia.org/wiki/Nintendo</a>
+<p class="content">Nintendo Co., Ltd. is a Japanese multinational consumer electronics and video game company headquartered in Kyoto. The company was founded in 1889 as Nintendo Karuta by craftsman Fusajiro Yamauchi and originally produced handmade hanafuda playing cards. After venturing into various lines of business during the 1960s and acquiring a legal status as a public company under the current company name, Nintendo distributed its first video game console, the Color TV-Game, in 1977. It gained international recognition with the release of the Nintendo Entertainment System in 1985.</p>
+<p class="content">Since then, Nintendo has produced some of the most successful consoles in the video game industry, such as the Game Boy, the Super Nintendo Entertainment System, the Nintendo DS, the Wii, and the Nintendo Switch. It has created numerous major franchises, including Mario, Donkey Kong, The Legend of Zelda, Pokémon, Kirby, Metroid, Fire Emblem, Animal Crossing, Splatoon, Star Fox, Xenoblade Chronicles, and Super Smash Bros.</p>
+<p class="content">Nintendo has multiple subsidiaries in Japan and abroad, in addition to business partners such as The Pokémon Company and HAL Laboratory. Nintendo and its staff has received awards including Emmy Awards for Technology & Engineering, Game Awards, Game Developers Choice Awards and British Academy Games Awards. It is one of the wealthiest and most valuable companies in the Japanese market.</p>
+<h1 class="title">Nintendo</h1>
+<a class="content" href="https://ru.wikipedia.org/wiki/Nintendo" target="_blank">https://ru.wikipedia.org/wiki/Nintendo</a>
+<p class="content">Материал из Википедии — свободной энциклопедии</p>
+<p class="content">Nintendo (яп. 任天堂株式会社 Нинтэндо: кабусики-гайся) — японская компания, специализирующаяся на создании видеоигр и игровых систем, со штаб-квартирой в Киото. Компания была основана в 1889 году ремесленником Фусадзиро Ямаути под названием Nintendo Karuta и первоначально производила игральные карты ручной работы «ханафуда». В 1960-х годах Nintendo начала заниматься другими видами бизнеса и приобрела юридический статус публичной компании под нынешним названием, а в 1977 году выпустила Color TV-Game, свою первую игровую приставку. Компания получила международное признание после выпуска игры Donkey Kong в 1981 году, а также игровой системы Nintendo Entertainment System и игры Super Mario Bros. в 1985 году.</p>
+<p class="content">С тех пор Nintendo выпустила несколько самых успешных игровых систем, таких как Game Boy, Super Nintendo Entertainment System, Nintendo DS, Wii и Nintendo Switch. Компания создала множество крупных франшиз, таких как Mario, Donkey Kong, The Legend of Zelda, Pokémon, Kirby, Metroid, Fire Emblem, Animal Crossing, Splatoon, Star Fox, Xenoblade Chronicles и Super Smash Bros.</p>
+<p class="content">Nintendo имеет множество дочерних компаний в Японии и за рубежом, а также таких деловых партнеров, как The Pokémon Company и HAL Laboratory. Компания Nintendo и ее сотрудники были удостоены таких наград, как Technology & Engineering Emmy Awards, Game Awards, Game Developers Choice Awards и «Премия Британской Академии в области видеоигр». Это одна из самых богатых и ценных компаний на японском рынке.</p>
 </body>
 </html>
