调整预览页样式

--- a/assets/www-static/index.html
+++ b/assets/www-static/index.html
@@ -15,13 +15,13 @@
             src: url("fusion-pixel.woff2");
         }
         .title {
-            font-family: Fusion-Pixel-12, sans-serif;
+            font-family: Fusion-Pixel-12, cursive;
             font-size: 36px;
             font-weight: normal;
             line-height: 48px;
         }
         .content {
-            font-family: Fusion-Pixel-12, sans-serif;
+            font-family: Fusion-Pixel-12, cursive;
             font-size: 24px;
             line-height: 36px;
         }
