--- a/assets/www-static/index.html
+++ b/assets/www-static/index.html
@@ -25,12 +25,22 @@
             font-size: 24px;
             line-height: 36px;
         }
+        .playground {
+            width: 100%;
+            padding: 12px;
+            resize: vertical;
+        }
     </style>
 </head>
 <body>
 <h1 class="title">缝合怪像素字体 / Fusion Pixel Font</h1>
 <p class="content">项目地址：<a href="https://github.com/TakWolf/fusion-pixel-font">https://github.com/TakWolf/fusion-pixel-font</a></p>
 <a class="content" href="alphabet.html">字符表</a>
+<br>
+<br>
+<label>
+    <textarea class="content playground" rows="6" placeholder="请随便写点什么… / Please input something…"></textarea>
+</label>
 <br>
 <div class="content">
     <p>我们每天度过的称之为日常的生活，其实是一个个奇迹的连续也说不定。</p>
