--- a/assets/www-static/index.html
+++ b/assets/www-static/index.html
@@ -31,6 +31,28 @@
             resize: vertical;
         }
     </style>
+
+    <!-- 百度统计 -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?3fff78ad08b6161b903a61bceb25adb1";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9J2VKMZMSN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-9J2VKMZMSN');
+    </script>
 </head>
 <body>
 <h1 class="title">缝合怪像素字体 / Fusion Pixel Font</h1>
